# OspreyLoyalty

./: .editorconfig  .gitignore  .gitleaks.toml  .trivyignore.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  run-docker-compose.ps1  run-docker-compose.sh  run-local-k8s.ps1  run-local-k8s.sh  run-unit-tests.ps1  run-unit-tests.sh  stop-docker-compose.ps1  stop-docker-compose.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: admin-portal.yml  contract-tests.yml  devsecops.yml  e2e.yml  gateway.yml  infra.yml  load-test.yml  member-portal.yml  members.yml  notifications.yml  partners.yml  points-engine.yml  route-explorer.yml  routes.yml  security.yml  shell.yml
contracts/earn-event/: README.md  earn-event.full.json  earn-event.minimal.json  earn-event.schema.json
contracts/member-events/: points-expiring-soon.full.json  points-expiring-soon.minimal.json  points-expiring-soon.schema.json  tier-changed.full.json  tier-changed.minimal.json  tier-changed.schema.json
docs/: architecture.md  data-privacy.md  delivery.md  domain.md  finops.md  threat-model.md
docs/decisions/: 0001-queue-rabbitmq.md  0002-idempotency-unique-ledger-key.md  0003-redemption-concurrency-conditional-update.md  0004-micro-frontend-tradeoff.md  0005-service-boundaries.md  0006-rust-points-engine.md  0007-zero-trust-auth.md  0008-opentelemetry-observability.md  0009-i18n-strategy.md  0010-in-app-help.md  0011-traefik-ingress.md  0012-compute-model-k8s-over-serverless.md  0013-slo-and-alerting.md  0014-contract-testing.md  0015-load-testing-and-finops.md  0016-transactional-outbox.md  0017-audit-log.md  0018-gdpr-erasure.md  0019-gitops-argocd.md  0020-progressive-delivery-argo-rollouts.md  0021-neo4j-route-graph.md  0022-svelte-mfe-leptos-wasm-island.md  0023-shell-owned-language.md  0024-member-events-and-notifications.md
docs/runbooks/: README.md  high-error-rate.md  high-latency.md  slos.md  target-down.md
frontends/admin-portal/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontends/member-portal/: .npmrc  Dockerfile  README.md  codegen.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontends/route-explorer/: .gitignore  Dockerfile  README.md  codegen.ts  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.tsbuildinfo  (+1 more)
frontends/route-explorer/wasm-map/: Cargo.toml
frontends/route-explorer/wasm-map/src/: basemap.rs  draw.rs  geometry.rs  lib.rs
frontends/route-explorer/wasm-map/tools/: build-basemap.mjs
infra/: docker-compose.yml  e2e-smoke.sh  e2e-ui-smoke.sh
services/points-engine/: Cargo.toml  Dockerfile  README.md
services/points-engine/benches/: points.rs
services/points-engine/src/: api.rs  i18n.rs  lib.rs  main.rs
services/points-engine/tests/: properties.rs
(+491 files in other folders)
