[package]
name = "osprey-points-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
rust_decimal = { version = "1.42.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
proptest = "1.11.0"
rust_decimal_macros = "1.40.0"
tower = { version = "0.5.3", features = ["util"] }
