[package]
name = "osprey-points-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
# jsonwebtoken 10 requires an explicit crypto backend. rust_crypto is pure-Rust,
# matching this crate's OpenSSL-free stance (rustls, pure-Rust rsa in tests).
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
prometheus = "0.14.0"
# Only needed to fetch the identity service's JWKS for RS256 validation (off the request path,
# behind the auth kill-switch). rustls to avoid an OpenSSL build dependency.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
rust_decimal = { version = "1.42.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
base64 = "0.22.1"
criterion = "0.8.2"
http-body-util = "0.1.3"
proptest = "1.11.0"
# rand + rsa held at stable: rand 0.10 forces rsa 0.10 which is only published as a
# release candidate (RustCrypto/RSA#466). Both are test-only (JWKS keygen), so staying on
# stable here has zero production impact. Revisit once rsa 0.10 ships stable.
rand = "0.10"
rsa = { version = "0.9", features = ["pem"] }
rust_decimal_macros = "1.40.0"
tower = { version = "0.5.3", features = ["util"] }

[[bench]]
name = "points"
harness = false
